# Ciridae-takehome

./: .env.example  LICENSE  README.md  new_graph.py
apps/api/: .env.example  main.py  new_graph.py  pyproject.toml
apps/api/data/: local-dev.db
apps/api/src/: db.py  extract_pdf.py  extract_pdf_llm.py  llm_client.py  llm_match_schemas.py  llm_roommap_schemas.py  llm_schemas.py  llm_utils.py  main.py  matching_llm.py  models.py  models_items.py  models_matches.py  models_roommap.py  new_graph.py  render_report.py  room_mapping.py  routes_extract.py  routes_match.py  routes_pipeline.py  routes_report.py  routes_roommap.py  routes_upload.py  schemas.py  settings.py
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  index.css  main.tsx  validation.ts
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
apps/web/src/lib/: utils.ts
infra/: docker-compose.yml
