[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "openai>=2.24.0",
    "pdfplumber>=0.11.9",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.7.5",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]
